--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@ layout: default
     404
   </h1>
   <p class="notfound__description">
-    The requested page could not be found.
+    Página no encontrado
   </p>
 </div>
